--- a/style.css
+++ b/style.css
@@ -41,8 +41,8 @@ body {
     top: 10px;
     right: 10px;
     padding: 10px;
-    background-color: #007BFF;
-    color: #fff;
+    background-color: dodgerblue;
+    color: white;
     cursor: pointer;
     border: none;
     border-radius: 5px;
@@ -58,7 +58,7 @@ body {
     border-radius: 5px;
     font-size: 16px;
     right: 70px;
-    background-color: #28a745;
+    background-color: limegreen;
     display: none;
 }
 
@@ -77,7 +77,7 @@ body {
 #gallery-images {
     max-width: 80%;
     max-height: 80%;
-    border: 2px solid #fff;
+    border: 2px solid white;
     border-radius: 10px;
 }
 
@@ -86,8 +86,8 @@ body {
     top: 10px;
     right: 10px;
     padding: 10px;
-    background-color: #fff;
-    color: #007BFF;
+    background-color: white;
+    color: dodgerblue;
     cursor: pointer;
     border: none;
     border-radius: 5px;
